# tiny-head-recaps

./: .gitignore  LICENSE  README.md
.github/workflows/: tf-apply.yaml
apps/: pyproject.toml
apps/gpt_recap_dummy/: helper_functions.py  main.py
bookSegmentation/: main.py
infra/: apis.tf  backend.tf  iam.tf  provider.tf  storage.tf  variables.tf
prompts/: system-prompt.txt  user-prompt.txt
